# allok8or

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  allok8or.code-workspace  macros.cmake
doc/: dev-log.md  glossary.md  todo.md
src/: CMakeLists.txt  align.h  allocation_tracker.cpp  allocation_tracker.h  allocator.h  allocator_adapter.h  block_allocator.h  diagnostic.h  diagnostic_allocation_stats.h  diagnostic_allocation_stats_reporter.h  diagnostic_allocation_tracker.cpp  diagnostic_allocation_tracker.h  diagnostic_block_header.cpp  diagnostic_block_header.h  diagnostic_header.h  diagnostic_new.h  diagnostic_tracking_pool.cpp  diagnostic_tracking_pool.h  diagnostic_util.h  fixed_block_header.h  fixed_block_pool.h  fixed_size_allocator.h  fixed_size_allocator_adapter.h  global.h  logging.h  memory.cpp  memory.h  page.cpp  page.h  pass_through.cpp  pass_through.h  portability.h  std_allocator_adapter.h  type_name_helper.h  types.h
src/diagnostic/: allocation_stats.h  allocation_stats_reporter.h  block_header.cpp  block_header.h  tracking_pool.cpp  tracking_pool.h  type_name_helper.h  util.h
test/: CMakeLists.txt  align-test.cpp  allocation_tracker-test.cpp  allocator_call_helper.h  diagnostic_allocation_stats-test.cpp  diagnostic_allocation_stats_reporter-test.cpp  diagnostic_allocation_tracker-test.cpp  diagnostic_allocator-test.cpp  diagnostic_block_header-test.cpp  diagnostic_header-test.cpp  diagnostic_tracking_pool-test.cpp  diagnostic_util-test.cpp  fixed_block_header-test.cpp  fixed_block_pool-test.cpp  global_allocator-test.cpp  logging-test.cpp  main.cpp  mock_allocator.h  page_allocator-test.cpp  pass_through-test.cpp  pass_through_allocator-test.cpp  std_allocator_adapter-test.cpp  type_name_helper-test.cpp
